--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,7 @@
-streamlit>=1.28.0
-folium>=0.14.0
-streamlit-folium>=0.15.0
-networkx>=3.0
-osmnx>=1.6.0
-geopy>=2.3.0
-anthropic>=0.25.0
-requests>=2.31.0
-geopandas>=0.14.0
-osmnx==1.3.0
-scikit-learn>=1.3.0
+streamlit
+folium
+streamlit-folium
+osmnx==1.9.1
+geopy
+networkx
+scikit-learn
